--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 }
 
 
+
 body {
 	background: linear-gradient(to bottom right, lightblue, pink) fixed;
 
@@ -12,4 +13,15 @@ body {
 		width: 70%;
 		height: 4rem;
 	}
+i {
+	font-size: 20px;
+}
+h4 {
+	font-size: 50px;
+
+	 -webkit-text-stroke-width: 2px;
+  	 -webkit-text-stroke-color: black;
+
+	color: white;
+}
 }
