--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,14 @@ body {
 	}
 
 	.well {
-		background-color: rgba(245,245,245,.6)
+		background-color: rgba(245,245,245,.3);
+		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+		transition: 0.3s;
+
+	}
+
+	.well:hover {
+		 box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
 	}
 
 	h1{
@@ -29,9 +36,25 @@ body {
 		width: 70%;
 		height: 4rem;
 	}
-i {
-	font-size: 20px;
-}
+
+
+	.submission-container {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0,0,0,.2);
+
+		.track-form {
+		
+    		position: fixed;
+  			top: 50%;
+  			left: 50%;
+  			transform: translate(-50%, -50%);
+		}
+	}
+	
 
 
 .vote-box {
