--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,21 +10,92 @@ body {
 	background: linear-gradient(to bottom right, lightblue, pink) fixed;
 
 
+.container{
+	    width: 100%;
+   		margin: 0;
+    	padding: 0;
+}
+
+
+.btn-group{
+	    margin-top: 5vh;
+    	margin-left: 3vh;
+}
+
+
+.headerUser {
+	right:0;
+	position: absolute;
+
+	h5 {
+		text-align: center;
+	}
+
+	h3 {
+		margin-top: 1vh;
+	}
+}
+
+.splash {
+	width: 100%;
+	height: 100%;
+
+	img {
+		width: 100%;
+		height: 100%;
+		opacity: .5;
+		z-index: -1;
+		position: fixed;
+	}
+
+	h2 {
+		display: inline-block;
+		transition: all 1s ease;
+
+	}
+
+	#pulse {
+		
+	}
+
+	#flip {
+		color: white;
+		transform: scaleX(-1);
+	}
+
+
+}
 
 	.btn {
 		background: #F7C3CE;
 		border-color: #F7C3CE;
 	}
+.challenges-container {
 
-	.well {
+		margin: 6vw;
+
+		h4{	
+			font-size: 5vw;
+			color: lavenderblush;
+			text-shadow: 2px 2px 8px grey;
+		}
+
+		.well {
 		background-color: rgba(245,245,245,.3);
 		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 		transition: 0.3s;
 
-	}
+			h1 {
+				text-align: center;
+			}
 
-	.well:hover {
-		 box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+		}	
+
+		.well:hover {
+			 box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+			 cursor: pointer;
+		}	
+
 	}
 
 	h1{
@@ -44,7 +115,8 @@ body {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: rgba(0,0,0,.2);
+		background: rgba(0,0,0,.7);
+		z-index: 2;
 
 		.track-form {
 		
@@ -54,23 +126,129 @@ body {
   			transform: translate(-50%, -50%);
 		}
 	}
+
+.tracks-container {
+	text-align: center;
+
+
+	.playing-gif-left {
+		position: absolute;
+		z-index: 1;
+		top: 35%;
+		left: 24%;
+		width:56px;
+		height: 56px;
+
+	}
+
+
+	.playing-gif-right {
+		position: absolute;
+		z-index: 1;
+		top: 35%;
+		right: 22%;
+		width:56px;
+		height: 56px;
+
+	}
+}
+	
+.track {
+	position: relative;
+	margin: 1vh;
+	width: 40%;
+	display: inline-block;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	img {
+		z-index: -1;
+	}
+
+	.cassetteHeader{
+		position: absolute;
+		text-align: center;
+		top: 12%;
+		width: 100%;
+
+		h2{
+
+			margin: 0;
+			font-size: 25px;
+			font-family: 'Indie Flower', cursive;
+
+		}
+
+		h3{
+			margin:0;
+			font-size: 20px;
+			font-family: 'Indie Flower', cursive;
+		}
+	
+	}
+
+	iframe {
+		visibility: hidden;
+		position: fixed;
+	}
+
+.track-controll {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+
+	i{
+		width: 30%;
+		font-size: 6vw;
+		color: white;
+	}
+
+	i:hover {
+		cursor: pointer;
+	}
+
 	
 
-iframe {
-	visibility: hidden;
+
 }
+}
+
 
 
 .vote-box {
 	border: 1px dashed red;
 }
-
-h4 {
-	font-size: 50px;
-
-	 -webkit-text-stroke-width: 2px;
-  	 -webkit-text-stroke-color: black;
-
-	color: white;
 }
-}
+
+
+
+
+
+
+
+// tape styles 
+
+
+
+
+
+
+.wornYellow {
+			background: linear-gradient(to right, rgba(252,252,234,1) 0%, rgba(254,216,134,1) 17%, rgba(255,193,69,1) 28%);
+		}
+
+
+
+.denim {
+			background: linear-gradient(45deg, rgba(165,178,222,1) 0%, rgba(129,164,205,1) 28%, rgba(129,164,205,1) 33%);
+		}
+
+
+.purp: {
+			background: linear-gradient(to bottom, rgba(163,56,133,1) 0%, rgba(125,52,103,1) 33%, rgba(104,50,87,1) 51%);
+		}
+
+.green {
+			background: linear-gradient(to right, rgba(137,158,139,1) 0%, rgba(123,166,126,1) 33%, rgba(115,171,119,1) 51%);
+		}
+
+
